Implement unsafeImportSyncBodyAndReceipts in DefaultBlockchain and use for import during snap sync
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>